destacados.css
    *{
        padding: 0;
        margin: 0;
    }
    .promo__next {
        position: absolute;
        z-index: 200;
        right: 0;
        top: 0;
        width: 180px;
        height: 100%;
        cursor: pointer;
        background:rgba(0,0,0,0);
    }
        
    #flecha{
        transition: all 1s ease;
        z-index: 205;
        width: 50px;
        height: 50px;
        position: absolute;
        right: 15px;
        bottom: 25px;
       
    }
    .container{
       /* transform: scale(0.5);*/
       /* background-color: yellow;*/
        width: 100%;
        height: 100vh;
        overflow: hidden;
        border: 3px solid green;
    
    }
    .pages{
      /*transform: scale(0.5);*/    
        width: 100%;
        box-sizing: border-box;
        background-color: black;
    
    }
    .overlay{
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100vh;
        display: flex;
        justify-content: center;  
        align-items: center;
        flex-direction: column;
        gap: 10px;
        transition: all 1s;
        background-color: black;
        background-color: black;
        opacity: .5;
        position: absolute;
        z-index: inherit;
    }
    .page{
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100vh;
        display: flex;
        justify-content: center;  
        align-items: center;
        flex-direction: column;
        gap: 10px;
        transition: all 1s;
        background-color: black;
    }
    .one{
        
        background-color: black;
        z-index: 100;
        left: -120px;
    }
    .two{
        background-color:black;
        z-index: 99;
        opacity: 1;
    }
    .three{
        background-color:black;
        z-index: 98;
    }
    .four{
        background-color:black;
        z-index: 97;
    }

